hammerhead: Disable LMK debugging
Change-Id: Ie2854ae77ffe78c708fcf1877548f960c3102ba8

--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -123,6 +123,7 @@ on boot
     # Adaptive LMK
     write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
     write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 53059
+    write /sys/module/lowmemorykiller/parameters/debug_level 0
 
     # Enable Power modes
     write /sys/module/lpm_resources/enable_low_power/l2 2
