--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -23,6 +23,8 @@ on early-init
 on fs
     mount_all ./fstab.hammerhead
     restorecon_recursive /persist
+    setprop persist.adb.nonblocking_ffs 0
+    setprop ro.adb.nonblocking_ffs 0
 
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
