hammerhead: init: Make encryption action an argument to mkdir
FscryptSetDirectoryPolicy no longer tries to infer the action from the
filename. Well mostly; it still assumes top-level directories in /data
should be encrypted unless the mkdir arguments say otherwise, but
it warns.

Bug: 26641735
Test: boot, check log messages
Change-Id: Id6d2cea7fb856f17323897d85cf6190c981b443c

--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -201,7 +201,7 @@ on post-fs-data
     write /sys/block/mmcblk0/queue/iostats 0
 
     # NFC: create data/nfc for nv storage
-    mkdir /data/nfc 0770 nfc nfc
+    mkdir /data/nfc 0770 nfc nfc encryption=Require
     mkdir /data/nfc/param 0770 nfc nfc
 
     # wifi (persist)
@@ -223,9 +223,8 @@ on post-fs-data
     mkdir /data/misc/audio 0770 audio audio
 
     # Create directory used by sensor subsystem
-    mkdir /data/system 0755 system system
-    mkdir /data/system/sensors
-    chmod 755 /data/system/sensors
+    mkdir /data/system 0755 system system encryption=Require
+    mkdir /data/system/sensors 0755 root root
 
     # AKM setting data
     mkdir /data/misc/sensors
