--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -31,6 +31,9 @@ on early-boot
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
 
+    # adsp
+    write /sys/kernel/boot_adsp/boot 1
+
 on boot
     # bluetooth
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
@@ -168,8 +171,6 @@ on boot
     chmod 664 /sys/devices/system/cpu/cpu3/online
 
 on post-fs-data
-    write /sys/kernel/boot_adsp/boot 1
-
     # Subsytem Ramdump collection
     mkdir /data/tombstones/ramdump 0777 system system
     write /sys/module/subsystem_restart/parameters/enable_ramdumps 1
