hammerhead: init: Update qseecom daemon service name
Update qseecom daemon service name as per new requirement

Change-Id: I5e30007223ea5b46e7287440aecd0405ee81f27a

--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -333,7 +333,7 @@ service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
     disabled
     oneshot
 
-service qseecomd /vendor/bin/qseecomd
+service vendor.qseecomd /vendor/bin/qseecomd
     class core
     user root
     group root
