--- a/ueventd.hammerhead.rc
+++ b/ueventd.hammerhead.rc
@@ -41,3 +41,6 @@
 /dev/jpeg2                0660   system     camera
 /dev/ttyHS99              0660   bluetooth  bluetooth
 /sys/devices/virtual/smdpkt/smdcntl*       open_timeout   0664 radio radio
+
+# SSR devices
+/dev/subsys_*             0640   system     system
