--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -20,6 +20,12 @@ on early-init
     mount debugfs debugfs /sys/kernel/debug
     chown system system /sys/kernel/debug/kgsl/proc
 
+on init
+    write /sys/block/zram0/comp_algorithm lz4
+    write /sys/block/zram0/max_comp_streams 4
+    write /proc/sys/vm/page-cluster 0
+    write /proc/sys/vm/swappiness 60
+
 on fs
     mount_all /vendor/etc/fstab.hammerhead
 
@@ -290,6 +296,9 @@ on property:sys.boot_completed=1
     # start mpdecision
     setprop vendor.post_boot.parsed 1
     start mpdecision
+
+    # enable zram
+    swapon_all /vendor/etc/fstab.hammerhead
 
     # enable slimport detection
     write /sys/module/slimport/parameters/enable_irq 1
