hammerhead: init: Set wifi firmware/nvram paths

--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -119,6 +119,11 @@ on boot
 
     # Wifi firmware reload path
     chown wifi wifi /sys/module/bcmdhd/parameters/firmware_path
+    chmod 0644 /sys/module/bcmdhd/parameters/firmware_path
+
+    # Wifi nvram reload path
+    chown wifi wifi /sys/module/bcmdhd/parameters/nvram_path
+    chmod 0644 /sys/module/bcmdhd/parameters/nvram_path
 
     # Adaptive LMK
     write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
@@ -221,6 +226,10 @@ on post-fs-data
     # Ecc_Handler qcril.db
     mkdir /data/misc/radio 0770 radio radio
     symlink /vendor/etc/qcril.db /data/misc/radio/qcril.db
+
+    # Make sure the default Wifi firmware and nvram are loaded
+    write /sys/module/bcmdhd/parameters/firmware_path "/vendor/firmware/fw_bcmdhd.bin"
+    write /sys/module/bcmdhd/parameters/nvram_path "/vendor/etc/wifi/bcmdhd.cal"
 
     # keep that at the end of on post-fs-data
     setprop vold.post_fs_data_done 1
