--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -195,6 +195,11 @@ on boot
     chmod 664 /sys/devices/system/cpu/cpu3/online
 
 on post-fs-data
+    # Setup boot up stage I/O scheduler
+    write /sys/block/mmcblk0/queue/scheduler noop
+    write /sys/block/mmcblk0/queue/read_ahead_kb 1024
+    write /sys/block/mmcblk0/queue/iostats 0
+
     # NFC: create data/nfc for nv storage
     mkdir /data/nfc 0770 nfc nfc
     mkdir /data/nfc/param 0770 nfc nfc
@@ -292,6 +297,11 @@ on zygote-start
 on property:sys.boot_completed=1
     # remove previous settings
     rm /data/system/default_values
+
+    # setup I/O scheduler
+    setprop sys.io.scheduler noop
+    write /sys/block/mmcblk0/queue/read_ahead_kb 128
+    write /sys/block/mmcblk0/queue/iostats 0
 
     # start mpdecision
     setprop vendor.post_boot.parsed 1
